# Eulerity-APM

./: .env.example  .gitignore  README.md  pyproject.toml  vercel.json
api/: index.py
examples/: sample_request.json
src/hyperlocal_ad_studio/: __init__.py  api.py  cli.py  config.py  critic.py  llm.py  local_context.py  models.py  service.py  tracing.py  utils.py  webapp.py  workflow.py
src/hyperlocal_ad_studio/web/: app.js  index.html  styles.css
tests/: test_workflow.py
